--- a/Cwatch.html
+++ b/Cwatch.html
@@ -93,16 +93,16 @@
                 <input type="radio" name="radio-btn" id="radio7" >
                 <input type="radio" name="radio-btn" id="radio8" >
                 <div class="slide first">
-                    <img src="immagini/5.jpg" alt="">
+                    <img src="immagini/disco1" alt="">
                 </div>
                 <div class="slide">
-                    <img src="immagini/6.png" alt="">
+                    <img src="immagini/disco2.jpeg" alt="">
                 </div>
                 <div class="slide">
-                    <img src="immagini/7.jpg" alt="">
+                    <img src="immagini/disco3.jpeg" alt="">
                 </div>
                 <div class="slide">
-                    <img src="8.jpg" alt="">
+                    <img src="immagini/disco4.jpeg" alt="">
                 </div>    
                 <div class="navigation_auto">
                         <div class="auto-btn1"></div>
@@ -121,7 +121,9 @@
         </div>
         <div class="container">
             <h2>Il club</h2>
-            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Facere asperiores repudiandae ut eligendi, modi ea libero? Dicta nobis nemo laudantium ipsa perspiciatis! Voluptatem assumenda voluptas ea nulla blanditiis, eaque mollitia.</p>
+            <h5>Il nostro locale è dotato di un sistema audio e luci di alta qualità, progettato per offrire una esperienza di divertimento unica e coinvolgente. La nostra pista da ballo è spaziosa e accogliente, perfetta per ballare al ritmo della musica del nostro DJ residente o di artisti ospiti.</h5>
+            <h5>Offriamo anche una vasta selezione di drink e cocktail preparati dai nostri barman professionisti, per soddisfare tutti i gusti. E se vuoi trascorrere una serata speciale, abbiamo anche delle aree VIP riservate dove puoi godere di un'esperienza più esclusiva.</h5>
+            <h5>Il nostro staff di sicurezza è altamente qualificato e garantiamo un ambiente sicuro e divertente per tutti i nostri clienti. Siamo aperti tutte le notti, quindi vi invitiamo a venire a ballare e divertirvi con noi.</h5>
         </div>
     </div>
 </div>
