--- a/file/i servizi.html
+++ b/file/i servizi.html
@@ -26,6 +26,89 @@
             </ul>
         </menu>
     </header>
+    <div class="presentazione">
+        <div class="container_slide">
+            <div class="slider">
+                <div class="slides">
+                    <input type="radio" name="radio-btn" id="radio1" >
+                    <input type="radio" name="radio-btn" id="radio2" >
+                    <input type="radio" name="radio-btn" id="radio3" >
+                    <input type="radio" name="radio-btn" id="radio4" >
+                    <div class="slide first">
+                        <img src="immagini/ristorante.jpg" alt="">
+                    </div>
+                    <div class="slide">
+                        <img src="immagini/ristorante esterno.jpg" alt="">
+                    </div>
+                    <div class="slide">
+                        <img src="immagini/2.jpg" alt="">
+                    </div>
+                    <div class="slide">
+                        <img src="immagini/salafesta.jpg" alt="">
+                    </div>    
+                    <div class="navigation_auto">
+                            <div class="auto-btn1"></div>
+                            <div class="auto-btn2"></div>
+                            <div class="auto-btn3"></div>
+                            <div class="auto-btn4"></div>
+                        </div>
+                </div>
+                <div class="navigation_manual">
+                    <label for="radio1" class="manual-btn"></label>
+                    <label for="radio2" class="manual-btn"></label>
+                    <label for="radio3" class="manual-btn"></label>
+                    <label for="radio4" class="manual-btn"></label>
+                </div>
+            </div>
+            <div class="container">
+                <h2>Benvenuti a Cwatch</h2>
+                <p>Benvenuti al nostro ristorante, dove la passione per il cibo e l'ospitalità si fondono per creare un'esperienza gastronomica indimenticabile. </p>
+            </div>
+        </div>
+    </div>
+    <div class="presentazione" id="ps1" >
+        <div class="container_slide" id="cs1">
+            <div class="slider" id="sl1">
+                <div class="slides">
+                    <input type="radio" name="radio-btn" id="radio5" >
+                    <input type="radio" name="radio-btn" id="radio6" >
+                    <input type="radio" name="radio-btn" id="radio7" >
+                    <input type="radio" name="radio-btn" id="radio8" >
+                    <div class="slide first">
+                        <img src="immagini/disco1" alt="">
+                    </div>
+                    <div class="slide">
+                        <img src="immagini/disco2.jpeg" alt="">
+                    </div>
+                    <div class="slide">
+                        <img src="immagini/disco3.jpeg" alt="">
+                    </div>
+                    <div class="slide">
+                        <img src="immagini/disco4.jpeg" alt="">
+                    </div>    
+                    <div class="navigation_auto">
+                            <div class="auto-btn1"></div>
+                            <div class="auto-btn2"></div>
+                            <div class="auto-btn3"></div>
+                            <div class="auto-btn4"></div>
+                        </div>
+                </div>
+                <div class="navigation_manual">
+                    <label for="radio5" class="manual-btn"></label>
+                    <label for="radio6" class="manual-btn"></label>
+                    <label for="radio7" class="manual-btn"></label>
+                    <label for="radio8" class="manual-btn"></label>
+                </div>
+          
+            </div>
+            <div class="container">
+                <h2>Il club</h2>
+                <h5>Il nostro locale è dotato di un sistema audio e luci di alta qualità, progettato per offrire una esperienza di divertimento unica e coinvolgente. La nostra pista da ballo è spaziosa e accogliente, perfetta per ballare al ritmo della musica del nostro DJ residente o di artisti ospiti.</h5>
+                <h5>Offriamo anche una vasta selezione di drink e cocktail preparati dai nostri barman professionisti, per soddisfare tutti i gusti. E se vuoi trascorrere una serata speciale, abbiamo anche delle aree VIP riservate dove puoi godere di un'esperienza più esclusiva.</h5>
+                <h5>Il nostro staff di sicurezza è altamente qualificato e garantiamo un ambiente sicuro e divertente per tutti i nostri clienti. Siamo aperti tutte le notti, quindi vi invitiamo a venire a ballare e divertirvi con noi.</h5>
+            </div>
+        </div>
+    </div>
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.3/jquery.min.js"></script>
     <script>
