--- a/file/menu.html
+++ b/file/menu.html
@@ -177,16 +177,16 @@
                         <input type="radio" name="radio-btn" id="radio7" >
                         <input type="radio" name="radio-btn" id="radio8" >
                         <div class="slide first">
-                            <img src="../immagini/primi piatti1.jpeg" alt="">
+                            <img src="../immagini/burger1.jpeg" alt="">
                         </div>
                         <div class="slide">
-                            <img src="../immagini/La carbonara.jpeg" alt="">
+                            <img src="../immagini/salmon burger.png" alt="">
                         </div>
                         <div class="slide">
-                            <img src="../immagini/ravuoli.jpeg" alt="">
+                            <img src="../immagini/panino rosa.jpeg" alt="">
                         </div>
                         <div class="slide">
-                            <img src="../immagini/risotto.jpeg" alt="">
+                            <img src="../immagini/patate.jpeg" alt="">
                         </div>    
                         <div class="navigation_auto">
                                 <div class="auto-btn1"></div>
@@ -206,10 +206,10 @@
                 <div class="container">
                     <h2>Hamburger</h2>
                     <ul>
-                        <li>Pici cacio e pepe</li>
-                        <li>La carbonara</li>
-                        <li>Ravioli asiago e funghi in salsa di aglio nero</li>
-                        <li>Risotto allo champagne e gamberi</li>
+                        <li>Burger 150g, cipolle caramellate, rucola, scamorza</li>
+                        <li>Pane nero, burger di salmone, cetriolo fresco, salsa yogurt</li>
+                        <li>Pane rosa, burger 150g, mozzarella</li>
+                        <li>Contorno di patatine fritte</li>
                     </ul>
                 </div>
             </div>
@@ -224,16 +224,16 @@
                         <input type="radio" name="radio-btn" id="radio3" >
                         <input type="radio" name="radio-btn" id="radio4" >
                         <div class="slide first">
-                           <img src="../immagini/secondo1.jpeg" alt="">
+                           <img src="../immagini/dolce brownie.jpeg" alt="">
                         </div>
                         <div class="slide">
-                            <img src="../immagini/tonno.jpeg" alt="">
+                            <img src="../immagini/millefoglie.jpeg" alt="">
                         </div>
                         <div class="slide">
-                            <img src="../immagini/sgombro.jpeg" alt="">
+                            <img src="../immagini/Tartelletta al lime e limone.jpeg" alt="">
                         </div>
                         <div class="slide">
-                            <img src="../immagini/avocado.jpeg" alt="">
+                            <img src="../immagini/tortino.jpeg" alt="">
                         </div>    
                         <div class="navigation_auto">
                                 <div class="auto-btn1"></div>
@@ -252,10 +252,10 @@
                 <div class="container">
                     <h2>Dolci</h2>
                     <ul>
-                        <li>Roast beef</li>
-                        <li>Tonno scottato in salsa di sesamo</li>
-                        <li>Caviale di melanzane con sgombro</li>
-                        <li>Insalata di tonno in avocado</li>
+                        <li>Brownie al cioccolato, croccante al caramello e gelato al burro di arachidi</li>
+                        <li>Millefoglie</li>
+                        <li>Tartelletta lime e limone</li>
+                        <li>Tortino al cioccolato bianco</li>
                     </ul>
                 </div>
             </div>
