--- a/Cwatch.html
+++ b/Cwatch.html
@@ -79,7 +79,7 @@
             </div>
         </div>
         <div class="container">
-            <h2>Benvenuti a Cwatch</h2>
+            <h2>Benvenuti a Cwtch</h2>
             <p>Benvenuti al nostro ristorante, dove la passione per il cibo e l'ospitalità si fondono per creare un'esperienza gastronomica indimenticabile. </p>
         </div>
     </div>
