--- a/file/i servizi.html
+++ b/file/i servizi.html
@@ -35,16 +35,16 @@
                     <input type="radio" name="radio-btn" id="radio3" >
                     <input type="radio" name="radio-btn" id="radio4" >
                     <div class="slide first">
-                        <img src="immagini/ristorante.jpg" alt="">
+                        <img src="../immagini/181.0.jpg" alt="">
                     </div>
                     <div class="slide">
-                        <img src="immagini/ristorante esterno.jpg" alt="">
+                        <img src="../immagini/servizi2.jpeg" alt="">
                     </div>
                     <div class="slide">
-                        <img src="immagini/2.jpg" alt="">
+                        <img src="../immagini/servizi3.jpeg" alt="">
                     </div>
                     <div class="slide">
-                        <img src="immagini/salafesta.jpg" alt="">
+                        <img src="../immagini/compleanni2.jpeg" alt="">
                     </div>    
                     <div class="navigation_auto">
                             <div class="auto-btn1"></div>
@@ -61,8 +61,8 @@
                 </div>
             </div>
             <div class="container">
-                <h2>Benvenuti a Cwatch</h2>
-                <p>Benvenuti al nostro ristorante, dove la passione per il cibo e l'ospitalità si fondono per creare un'esperienza gastronomica indimenticabile. </p>
+                <h2>Cwtch servizi</h2>
+                <h5>Cwtch servizi ti offre la possibilità di celebrare i tuoi momenti con noi. Per compleanni, diciottesimi, feste di laurea o cene di lavoro il nostro staff altamente preparato per organizzare alla perfezione eventi speciali.</h5>
             </div>
         </div>
     </div>
@@ -75,13 +75,103 @@
                     <input type="radio" name="radio-btn" id="radio7" >
                     <input type="radio" name="radio-btn" id="radio8" >
                     <div class="slide first">
-                        <img src="immagini/disco1" alt="">
+                        <img src="../immagini/servizi2.jpeg" alt="">
                     </div>
                     <div class="slide">
-                        <img src="immagini/disco2.jpeg" alt="">
+                        <img src="../immagini/cena aziendale.jpg" alt="">
                     </div>
                     <div class="slide">
-                        <img src="immagini/disco3.jpeg" alt="">
+                        <img src="../immagini/cena aziendale2.jpeg" alt="">
+                    </div>
+                    <div class="slide">
+                        <img src="../immagini/salafesta.jpg" alt="">
+                    </div>    
+                    <div class="navigation_auto">
+                            <div class="auto-btn1"></div>
+                            <div class="auto-btn2"></div>
+                            <div class="auto-btn3"></div>
+                            <div class="auto-btn4"></div>
+                        </div>
+                </div>
+                <div class="navigation_manual">
+                    <label for="radio5" class="manual-btn"></label>
+                    <label for="radio6" class="manual-btn"></label>
+                    <label for="radio7" class="manual-btn"></label>
+                    <label for="radio8" class="manual-btn"></label>
+                </div>
+          
+            </div>
+            <div class="container">
+                <h2>Cena aziendale</h2>
+                <h5>Siamo lieti di offrire ai nostri clienti spazi ampi e accoglienti per soddisfare tutte le vostre esigenze.
+                <h5>Il nostro locale dispone di sale private e spazi comuni, tutti dotati di un'atmosfera unica e di un'esperienza gastronomica eccezionale. Il nostro chef e il nostro staff altamente qualificato saranno felici di personalizzare un menu in base alle vostre esigenze e di fornire un servizio di altissimo livello.</h5>
+                <h5>Inoltre, il nostro staff è a vostra disposizione per assistervi nella pianificazione dell'evento, dalla disposizione delle sedie e dei tavoli alla scelta della musica e dell'illuminazione.</h5>
+                <h5>Non importa quale sia la vostra richiesta, ci impegniamo a farvi vivere un'esperienza indimenticabile. Contattateci per prenotare la vostra cena aziendale nel nostro locale, saremo felici di accogliervi e farvi vivere un'esperienza culinaria unica.</h5>
+            </div>
+        </div>
+    </div>
+
+    <div class="presentazione">
+        <div class="container_slide">
+            <div class="slider">
+                <div class="slides">
+                    <input type="radio" name="radio-btn" id="radio1" >
+                    <input type="radio" name="radio-btn" id="radio2" >
+                    <input type="radio" name="radio-btn" id="radio3" >
+                    <input type="radio" name="radio-btn" id="radio4" >
+                    <div class="slide first">
+                        <img src="../immagini/servizi1.jpeg" alt="">
+                    </div>
+                    <div class="slide">
+                        <img src="../immagini/181.0.jpg" alt="">
+                    </div>
+                    <div class="slide">
+                        <img src="../immagini/compleanno1.jpeg" alt="">
+                    </div>
+                    <div class="slide">
+                        <img src="../immagini/compleanno3.jpeg aziendale2.jpeg" alt="">
+                    </div>    
+                    <div class="navigation_auto">
+                            <div class="auto-btn1"></div>
+                            <div class="auto-btn2"></div>
+                            <div class="auto-btn3"></div>
+                            <div class="auto-btn4"></div>
+                        </div>
+                </div>
+                <div class="navigation_manual">
+                    <label for="radio1" class="manual-btn"></label>
+                    <label for="radio2" class="manual-btn"></label>
+                    <label for="radio3" class="manual-btn"></label>
+                    <label for="radio4" class="manual-btn"></label>
+                </div>
+            </div>
+            <div class="container">
+                <h2>Diciottesimo e compleanni</h2>
+                <h5>Siete alla ricerca di un luogo perfetto per festeggiare il vostro compleanno? Siamo lieti di offrire ai nostri clienti diverse opzioni per soddisfare tutte le vostre esigenze.</h5>
+                <h5>Potete scegliere di festeggiare con una cena deliziosa preparata dal nostro chef, con un aperitivo con gli amici o con una festa in discoteca, ballando al ritmo della musica del nostro DJ residente o di artisti ospiti.</h5>
+                <h5>Il nostro locale dispone di spazi ampi e ben arredati, perfetti per ospitare grandi gruppi di amici e familiari. Il nostro staff altamente qualificato sarà felice di personalizzare il menu e fornire un servizio di altissimo livello per rendere la vostra serata ancora più speciale.</h5>
+                <h5>Inoltre, il nostro sistema audio e luci di alta qualità creerà l'atmosfera perfetta per ballare e divertirsi con i vostri amici. E se volete rendere la vostra serata ancora più speciale, abbiamo anche aree VIP riservate.</h5>
+                <h5>Non importa quale sia la vostra scelta, ci impegniamo a farvi vivere una serata indimenticabile. Contattateci per prenotare la vostra festa di compleanno nel nostro locale, saremo felici di accogliervi e farvi vivere un'esperienza festosa e divertente. A presto!</h5>
+            </div>
+        </div>
+    </div>
+
+    <div class="presentazione" id="ps1" >
+        <div class="container_slide" id="cs1">
+            <div class="slider" id="sl1">
+                <div class="slides">
+                    <input type="radio" name="radio-btn" id="radio5" >
+                    <input type="radio" name="radio-btn" id="radio6" >
+                    <input type="radio" name="radio-btn" id="radio7" >
+                    <input type="radio" name="radio-btn" id="radio8" >
+                    <div class="slide first">
+                        <img src="../immagini/servizi1.jpeg" alt="">
+                    </div>
+                    <div class="slide">
+                        <img src="../immagini/servizi2.jpeg" alt="">
+                    </div>
+                    <div class="slide">
+                        <img src="../immagini/servizi3.jpeg" alt="">
                     </div>
                     <div class="slide">
                         <img src="immagini/disco4.jpeg" alt="">
@@ -102,10 +192,11 @@
           
             </div>
             <div class="container">
-                <h2>Il club</h2>
-                <h5>Il nostro locale è dotato di un sistema audio e luci di alta qualità, progettato per offrire una esperienza di divertimento unica e coinvolgente. La nostra pista da ballo è spaziosa e accogliente, perfetta per ballare al ritmo della musica del nostro DJ residente o di artisti ospiti.</h5>
-                <h5>Offriamo anche una vasta selezione di drink e cocktail preparati dai nostri barman professionisti, per soddisfare tutti i gusti. E se vuoi trascorrere una serata speciale, abbiamo anche delle aree VIP riservate dove puoi godere di un'esperienza più esclusiva.</h5>
-                <h5>Il nostro staff di sicurezza è altamente qualificato e garantiamo un ambiente sicuro e divertente per tutti i nostri clienti. Siamo aperti tutte le notti, quindi vi invitiamo a venire a ballare e divertirvi con noi.</h5>
+                <h2>Festa di laurea</h2>
+                <h5>Siamo lieti di offrire ai nostri clienti un ambiente festoso e accogliente per celebrare questo importante traguardo.</h5>
+                <h5>Il nostro locale dispone di spazi ampi e ben arredati, perfetti per ospitare grandi gruppi di amici e familiari. Il nostro staff altamente qualificato sarà felice di personalizzare il menu e fornire un servizio di altissimo livello per soddisfare le vostre esigenze.</h5>
+                <h5>Inoltre, il nostro sistema audio e luci di alta qualità creerà l'atmosfera perfetta per ballare e divertirsi con i vostri amici. Catering, fotografi, dj sono a vostra disposizione. Potete scegliere tra apericena, cena al tavolo o un semplice rinfresco.</h5>
+                <h5>Non importa quale sia il vostro desiderio, ci impegniamo a farvi vivere una serata indimenticabile. Contattateci per prenotare la vostra festa di laurea nel nostro locale, saremo felici di accogliervi e farvi vivere un'esperienza festosa e divertente. Congratulazioni per il vostro traguardo e a presto!</h5>
             </div>
         </div>
     </div>
