--- a/Cwatch.html
+++ b/Cwatch.html
@@ -7,6 +7,9 @@
     <title>Cwach</title>
     <link rel="stylesheet" href="styleCwach.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/4.2.0/normalize.min.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Ubuntu:wght@300&display=swap" rel="stylesheet">
 </head>
 <body>
     
@@ -121,9 +124,9 @@
         </div>
         <div class="container">
             <h2>Il club</h2>
-            <h5>Il nostro locale è dotato di un sistema audio e luci di alta qualità, progettato per offrire una esperienza di divertimento unica e coinvolgente. La nostra pista da ballo è spaziosa e accogliente, perfetta per ballare al ritmo della musica del nostro DJ residente o di artisti ospiti.</h5>
-            <h5>Offriamo anche una vasta selezione di drink e cocktail preparati dai nostri barman professionisti, per soddisfare tutti i gusti. E se vuoi trascorrere una serata speciale, abbiamo anche delle aree VIP riservate dove puoi godere di un'esperienza più esclusiva.</h5>
-            <h5>Il nostro staff di sicurezza è altamente qualificato e garantiamo un ambiente sicuro e divertente per tutti i nostri clienti. Siamo aperti tutte le notti, quindi vi invitiamo a venire a ballare e divertirvi con noi.</h5>
+            <p>Il nostro locale è dotato di un sistema audio e luci di alta qualità, progettato per offrire una esperienza di divertimento unica e coinvolgente. La nostra pista da ballo è spaziosa e accogliente, perfetta per ballare al ritmo della musica del nostro DJ residente o di artisti ospiti.</p>
+            <p>Offriamo anche una vasta selezione di drink e cocktail preparati dai nostri barman professionisti, per soddisfare tutti i gusti. E se vuoi trascorrere una serata speciale, abbiamo anche delle aree VIP riservate dove puoi godere di un'esperienza più esclusiva.</p>
+            <p>Il nostro staff di sicurezza è altamente qualificato e garantiamo un ambiente sicuro e divertente per tutti i nostri clienti. Siamo aperti tutte le notti, quindi vi invitiamo a venire a ballare e divertirvi con noi.</p>
         </div>
     </div>
 </div>
