--- a/file/Lista alcolici.html
+++ b/file/Lista alcolici.html
@@ -65,8 +65,8 @@
                 </div>
                 <div class="container">
                     <h2>Enoteca Cwtch</h2>
-                    <h5>Benvenuti nella Cwtch enoteca! Siamo appassionati di vino e abbiamo curato una selezione di bottiglie pregiati provenienti da tutto il mondo per soddisfare i gusti dei nostri clienti più esigenti.</h5>
-                    <h5>Abbiamo scelto con cura ogni vino in modo da offrire una vasta gamma di gusti e aromi, dai bianchi leggeri ai rossi corposi, passando per i vini frizzanti e dolci. Ogni bottiglia è stata selezionata per la sua qualità e provenienza, e il nostro personale esperto è a disposizione per aiutarvi a trovare il vino perfetto per ogni occasione.</h5>
+                    <p>Benvenuti nella Cwtch enoteca! Siamo appassionati di vino e abbiamo curato una selezione di bottiglie pregiati provenienti da tutto il mondo per soddisfare i gusti dei nostri clienti più esigenti.</p>
+                    <p>Abbiamo scelto con cura ogni vino in modo da offrire una vasta gamma di gusti e aromi, dai bianchi leggeri ai rossi corposi, passando per i vini frizzanti e dolci. Ogni bottiglia è stata selezionata per la sua qualità e provenienza, e il nostro personale esperto è a disposizione per aiutarvi a trovare il vino perfetto per ogni occasione.</p>
                 </div>
             </div>
         </div>
@@ -201,10 +201,10 @@
                 </div>
                 <div class="container">
                     <h2>Cocktail</h2>
-                    <h5>Siamo molto orgogliosi di offrire ai nostri clienti una vasta selezione di drink alcolici ed analcolici preparati dai nostri barman professionisti.</h5>
-                    <h5>La nostra carta dei drink è stata accuratamente studiata per offrire una varietà di opzioni per tutti i gusti, dai classici ai più moderni, senza mai perdere di vista la qualità degli ingredienti. I nostri barman sono altamente qualificati e possono creare cocktail personalizzati in base ai vostri gusti, utilizzando ingredienti freschi e di alta qualità.</h5>
-                    <h5>Inoltre, offriamo anche una selezione di analcolici, come succhi di frutta freschi e bevande gassate artigianali, ideali per coloro che non bevono alcol o per chi vuole solo rinfrescarsi.</h5>
-                    <h5>Non esitate a chiedere al nostro personale esperto consigli su cosa scegliere, saranno felici di consigliarvi e faremo in modo che il vostro tempo trascorso nel nostro locale sia il più piacevole possibile.</h5>
+                    <p>Siamo molto orgogliosi di offrire ai nostri clienti una vasta selezione di drink alcolici ed analcolici preparati dai nostri barman professionisti.</p>
+                    <p>La nostra carta dei drink è stata accuratamente studiata per offrire una varietà di opzioni per tutti i gusti, dai classici ai più moderni, senza mai perdere di vista la qualità degli ingredienti. I nostri barman sono altamente qualificati e possono creare cocktail personalizzati in base ai vostri gusti, utilizzando ingredienti freschi e di alta qualità.</p>
+                    <p>Inoltre, offriamo anche una selezione di analcolici, come succhi di frutta freschi e bevande gassate artigianali, ideali per coloro che non bevono alcol o per chi vuole solo rinfrescarsi.</p>
+                    <p>Non esitate a chiedere al nostro personale esperto consigli su cosa scegliere, saranno felici di consigliarvi e faremo in modo che il vostro tempo trascorso nel nostro locale sia il più piacevole possibile.</p>
                 </div>
             </div>
         </div>
