--- a/file/i servizi.html
+++ b/file/i servizi.html
@@ -62,7 +62,7 @@
             </div>
             <div class="container">
                 <h2>Cwtch servizi</h2>
-                <h5>Cwtch servizi ti offre la possibilità di celebrare i tuoi momenti con noi. Per compleanni, diciottesimi, feste di laurea o cene di lavoro il nostro staff altamente preparato per organizzare alla perfezione eventi speciali.</h5>
+                <p>Cwtch servizi ti offre la possibilità di celebrare i tuoi momenti con noi. Per compleanni, diciottesimi, feste di laurea o cene di lavoro il nostro staff altamente preparato per organizzare alla perfezione eventi speciali.</p>
             </div>
         </div>
     </div>
@@ -103,10 +103,10 @@
             </div>
             <div class="container">
                 <h2>Cena aziendale</h2>
-                <h5>Siamo lieti di offrire ai nostri clienti spazi ampi e accoglienti per soddisfare tutte le vostre esigenze.
-                <h5>Il nostro locale dispone di sale private e spazi comuni, tutti dotati di un'atmosfera unica e di un'esperienza gastronomica eccezionale. Il nostro chef e il nostro staff altamente qualificato saranno felici di personalizzare un menu in base alle vostre esigenze e di fornire un servizio di altissimo livello.</h5>
-                <h5>Inoltre, il nostro staff è a vostra disposizione per assistervi nella pianificazione dell'evento, dalla disposizione delle sedie e dei tavoli alla scelta della musica e dell'illuminazione.</h5>
-                <h5>Non importa quale sia la vostra richiesta, ci impegniamo a farvi vivere un'esperienza indimenticabile. Contattateci per prenotare la vostra cena aziendale nel nostro locale, saremo felici di accogliervi e farvi vivere un'esperienza culinaria unica.</h5>
+                <p>Siamo lieti di offrire ai nostri clienti spazi ampi e accoglienti per soddisfare tutte le vostre esigenze.</p>
+                <p>Il nostro locale dispone di sale private e spazi comuni, tutti dotati di un'atmosfera unica e di un'esperienza gastronomica eccezionale. Il nostro chef e il nostro staff altamente qualificato saranno felici di personalizzare un menu in base alle vostre esigenze e di fornire un servizio di altissimo livello.</p>
+                <p>Inoltre, il nostro staff è a vostra disposizione per assistervi nella pianificazione dell'evento, dalla disposizione delle sedie e dei tavoli alla scelta della musica e dell'illuminazione.</p>
+                <p>Non importa quale sia la vostra richiesta, ci impegniamo a farvi vivere un'esperienza indimenticabile. Contattateci per prenotare la vostra cena aziendale nel nostro locale, saremo felici di accogliervi e farvi vivere un'esperienza culinaria unica.</p>
             </div>
         </div>
     </div>
@@ -147,11 +147,11 @@
             </div>
             <div class="container">
                 <h2>Diciottesimo e compleanni</h2>
-                <h5>Siete alla ricerca di un luogo perfetto per festeggiare il vostro compleanno? Siamo lieti di offrire ai nostri clienti diverse opzioni per soddisfare tutte le vostre esigenze.</h5>
-                <h5>Potete scegliere di festeggiare con una cena deliziosa preparata dal nostro chef, con un aperitivo con gli amici o con una festa in discoteca, ballando al ritmo della musica del nostro DJ residente o di artisti ospiti.</h5>
-                <h5>Il nostro locale dispone di spazi ampi e ben arredati, perfetti per ospitare grandi gruppi di amici e familiari. Il nostro staff altamente qualificato sarà felice di personalizzare il menu e fornire un servizio di altissimo livello per rendere la vostra serata ancora più speciale.</h5>
-                <h5>Inoltre, il nostro sistema audio e luci di alta qualità creerà l'atmosfera perfetta per ballare e divertirsi con i vostri amici. E se volete rendere la vostra serata ancora più speciale, abbiamo anche aree VIP riservate.</h5>
-                <h5>Non importa quale sia la vostra scelta, ci impegniamo a farvi vivere una serata indimenticabile. Contattateci per prenotare la vostra festa di compleanno nel nostro locale, saremo felici di accogliervi e farvi vivere un'esperienza festosa e divertente. A presto!</h5>
+                <p>Siete alla ricerca di un luogo perfetto per festeggiare il vostro compleanno? Siamo lieti di offrire ai nostri clienti diverse opzioni per soddisfare tutte le vostre esigenze.</p>
+                <p>Potete scegliere di festeggiare con una cena deliziosa preparata dal nostro chef, con un aperitivo con gli amici o con una festa in discoteca, ballando al ritmo della musica del nostro DJ residente o di artisti ospiti.</p>
+                <p>Il nostro locale dispone di spazi ampi e ben arredati, perfetti per ospitare grandi gruppi di amici e familiari. Il nostro staff altamente qualificato sarà felice di personalizzare il menu e fornire un servizio di altissimo livello per rendere la vostra serata ancora più speciale.</p>
+                <p>Inoltre, il nostro sistema audio e luci di alta qualità creerà l'atmosfera perfetta per ballare e divertirsi con i vostri amici. E se volete rendere la vostra serata ancora più speciale, abbiamo anche aree VIP riservate.</p>
+                <p>Non importa quale sia la vostra scelta, ci impegniamo a farvi vivere una serata indimenticabile. Contattateci per prenotare la vostra festa di compleanno nel nostro locale, saremo felici di accogliervi e farvi vivere un'esperienza festosa e divertente. A presto!</p>
             </div>
         </div>
     </div>
@@ -193,10 +193,10 @@
             </div>
             <div class="container">
                 <h2>Festa di laurea</h2>
-                <h5>Siamo lieti di offrire ai nostri clienti un ambiente festoso e accogliente per celebrare questo importante traguardo.</h5>
-                <h5>Il nostro locale dispone di spazi ampi e ben arredati, perfetti per ospitare grandi gruppi di amici e familiari. Il nostro staff altamente qualificato sarà felice di personalizzare il menu e fornire un servizio di altissimo livello per soddisfare le vostre esigenze.</h5>
-                <h5>Inoltre, il nostro sistema audio e luci di alta qualità creerà l'atmosfera perfetta per ballare e divertirsi con i vostri amici. Catering, fotografi, dj sono a vostra disposizione. Potete scegliere tra apericena, cena al tavolo o un semplice rinfresco.</h5>
-                <h5>Non importa quale sia il vostro desiderio, ci impegniamo a farvi vivere una serata indimenticabile. Contattateci per prenotare la vostra festa di laurea nel nostro locale, saremo felici di accogliervi e farvi vivere un'esperienza festosa e divertente. Congratulazioni per il vostro traguardo e a presto!</h5>
+                <p>Siamo lieti di offrire ai nostri clienti un ambiente festoso e accogliente per celebrare questo importante traguardo.</p>
+                <p>Il nostro locale dispone di spazi ampi e ben arredati, perfetti per ospitare grandi gruppi di amici e familiari. Il nostro staff altamente qualificato sarà felice di personalizzare il menu e fornire un servizio di altissimo livello per soddisfare le vostre esigenze.</p>
+                <p>Inoltre, il nostro sistema audio e luci di alta qualità creerà l'atmosfera perfetta per ballare e divertirsi con i vostri amici. Catering, fotografi, dj sono a vostra disposizione. Potete scegliere tra apericena, cena al tavolo o un semplice rinfresco.</p>
+                <p>Non importa quale sia il vostro desiderio, ci impegniamo a farvi vivere una serata indimenticabile. Contattateci per prenotare la vostra festa di laurea nel nostro locale, saremo felici di accogliervi e farvi vivere un'esperienza festosa e divertente. Congratulazioni per il vostro traguardo e a presto!</p>
             </div>
         </div>
     </div>
