--- a/file/i servizi.html
+++ b/file/i servizi.html
@@ -103,10 +103,7 @@
             </div>
             <div class="container">
                 <h2>Cena aziendale</h2>
-                <h5>Siamo lieti di offrire ai nostri clienti spazi ampi e accoglienti per soddisfare tutte le vostre esigenze.
-                <h5>Il nostro locale dispone di sale private e spazi comuni, tutti dotati di un'atmosfera unica e di un'esperienza gastronomica eccezionale. Il nostro chef e il nostro staff altamente qualificato saranno felici di personalizzare un menu in base alle vostre esigenze e di fornire un servizio di altissimo livello.</h5>
-                <h5>Inoltre, il nostro staff è a vostra disposizione per assistervi nella pianificazione dell'evento, dalla disposizione delle sedie e dei tavoli alla scelta della musica e dell'illuminazione.</h5>
-                <h5>Non importa quale sia la vostra richiesta, ci impegniamo a farvi vivere un'esperienza indimenticabile. Contattateci per prenotare la vostra cena aziendale nel nostro locale, saremo felici di accogliervi e farvi vivere un'esperienza culinaria unica.</h5>
+                <h5>Cwtch offre ai clienti sia sale private che spazi comuni con un'atmosfera unica e un'esperienza gastronomica eccezionale. Il menu può essere personalizzato in base alle esigenze dei clienti e lo staff è a disposizione per assistere nella pianificazione dell'evento, dalla disposizione dei tavoli alla scelta della musica e dell'illuminazione. Il ristorante si impegna a far vivere un'esperienza culinaria indimenticabile ai clienti e invita a contattarli per prenotare una cena aziendale.</h5>
             </div>
         </div>
     </div>
@@ -115,21 +112,21 @@
         <div class="container_slide">
             <div class="slider">
                 <div class="slides">
-                    <input type="radio" name="radio-btn" id="radio1" >
-                    <input type="radio" name="radio-btn" id="radio2" >
-                    <input type="radio" name="radio-btn" id="radio3" >
-                    <input type="radio" name="radio-btn" id="radio4" >
+                    <input type="radio" name="radio-btn" id="radio9" >
+                    <input type="radio" name="radio-btn" id="radio10" >
+                    <input type="radio" name="radio-btn" id="radio11" >
+                    <input type="radio" name="radio-btn" id="radio12" >
                     <div class="slide first">
-                        <img src="../immagini/servizi1.jpeg" alt="">
+                        <img src="../immagini/compleanno2.jpeg" alt="">
                     </div>
                     <div class="slide">
                         <img src="../immagini/181.0.jpg" alt="">
                     </div>
                     <div class="slide">
-                        <img src="../immagini/compleanno1.jpeg" alt="">
+                        <img src="../immagini/compleanni2.jpeg" alt="">
                     </div>
                     <div class="slide">
-                        <img src="../immagini/compleanno3.jpeg aziendale2.jpeg" alt="">
+                        <img src="../immagini/compleanno3.jpeg" alt="">
                     </div>    
                     <div class="navigation_auto">
                             <div class="auto-btn1"></div>
@@ -139,10 +136,10 @@
                         </div>
                 </div>
                 <div class="navigation_manual">
-                    <label for="radio1" class="manual-btn"></label>
-                    <label for="radio2" class="manual-btn"></label>
-                    <label for="radio3" class="manual-btn"></label>
-                    <label for="radio4" class="manual-btn"></label>
+                    <label for="radio9" class="manual-btn"></label>
+                    <label for="radio10" class="manual-btn"></label>
+                    <label for="radio11" class="manual-btn"></label>
+                    <label for="radio12" class="manual-btn"></label>
                 </div>
             </div>
             <div class="container">
@@ -160,21 +157,21 @@
         <div class="container_slide" id="cs1">
             <div class="slider" id="sl1">
                 <div class="slides">
-                    <input type="radio" name="radio-btn" id="radio5" >
-                    <input type="radio" name="radio-btn" id="radio6" >
-                    <input type="radio" name="radio-btn" id="radio7" >
-                    <input type="radio" name="radio-btn" id="radio8" >
+                    <input type="radio" name="radio-btn" id="radio13" >
+                    <input type="radio" name="radio-btn" id="radio14" >
+                    <input type="radio" name="radio-btn" id="radio15" >
+                    <input type="radio" name="radio-btn" id="radio16" >
                     <div class="slide first">
-                        <img src="../immagini/servizi1.jpeg" alt="">
+                        <img src="../immagini/181.0.jpeg" alt="">
                     </div>
                     <div class="slide">
-                        <img src="../immagini/servizi2.jpeg" alt="">
+                        <img src="../immagini/compleanno1.jpeg" alt="">
                     </div>
                     <div class="slide">
-                        <img src="../immagini/servizi3.jpeg" alt="">
+                        <img src="../immagini/compleanni2.jpeg" alt="">
                     </div>
                     <div class="slide">
-                        <img src="immagini/disco4.jpeg" alt="">
+                        <img src="../immagini/compleanno3.jpeg" alt="">
                     </div>    
                     <div class="navigation_auto">
                             <div class="auto-btn1"></div>
@@ -184,10 +181,10 @@
                         </div>
                 </div>
                 <div class="navigation_manual">
-                    <label for="radio5" class="manual-btn"></label>
-                    <label for="radio6" class="manual-btn"></label>
-                    <label for="radio7" class="manual-btn"></label>
-                    <label for="radio8" class="manual-btn"></label>
+                    <label for="radio13" class="manual-btn"></label>
+                    <label for="radio14" class="manual-btn"></label>
+                    <label for="radio15" class="manual-btn"></label>
+                    <label for="radio16" class="manual-btn"></label>
                 </div>
           
             </div>
