--- a/Cwatch.html
+++ b/Cwatch.html
@@ -59,7 +59,7 @@
                     <img src="immagini/ristorante esterno.jpg" alt="">
                 </div>
                 <div class="slide">
-                    <img src="immagini/2.jpg" alt="">
+                    <img src="immagini/presentazione3.jpg" alt="">
                 </div>
                 <div class="slide">
                     <img src="immagini/salafesta.jpg" alt="">
@@ -79,8 +79,10 @@
             </div>
         </div>
         <div class="container">
-            <h2>Benvenuti a Cwtch</h2>
-            <p>Benvenuti al nostro ristorante, dove la passione per il cibo e l'ospitalità si fondono per creare un'esperienza gastronomica indimenticabile. </p>
+            <h2>Cwtch Ristò</h2>
+            <h5>
+                Il nostro ristorante offre un menu gourmet preparato da chef esperti, con ingredienti di alta qualità e un'attenzione particolare alla presentazione dei piatti. Inoltre, abbiamo una vasta selezione di vini provenienti da diverse regioni, conservati nella nostra enoteca. Il nostro obiettivo è fornire ai nostri clienti un'esperienza culinaria unica e indimenticabile, accompagnata da un servizio attento e professionale.
+            </h5>
         </div>
     </div>
 </div>
@@ -120,10 +122,8 @@
       
         </div>
         <div class="container">
-            <h2>Il club</h2>
-            <h5>Il nostro locale è dotato di un sistema audio e luci di alta qualità, progettato per offrire una esperienza di divertimento unica e coinvolgente. La nostra pista da ballo è spaziosa e accogliente, perfetta per ballare al ritmo della musica del nostro DJ residente o di artisti ospiti.</h5>
-            <h5>Offriamo anche una vasta selezione di drink e cocktail preparati dai nostri barman professionisti, per soddisfare tutti i gusti. E se vuoi trascorrere una serata speciale, abbiamo anche delle aree VIP riservate dove puoi godere di un'esperienza più esclusiva.</h5>
-            <h5>Il nostro staff di sicurezza è altamente qualificato e garantiamo un ambiente sicuro e divertente per tutti i nostri clienti. Siamo aperti tutte le notti, quindi vi invitiamo a venire a ballare e divertirvi con noi.</h5>
+            <h2>Cwtch Club</h2>
+            <h5>Il nostro locale dotato di un sistema audio e luci di alta qualità, una spaziosa pista da ballo e una vasta selezione di drink preparati da barman professionisti. Cwtch Club offre anche delle aree VIP riservate per un'esperienza più esclusiva. Il personale di sicurezza è altamente qualificato per garantire un ambiente sicuro e divertente per tutti i clienti. Il locale è aperto tutte le notti e invita i clienti a venire a ballare e divertirsi.</h5>
         </div>
     </div>
 </div>
