--- a/file/Lista alcolici.html
+++ b/file/Lista alcolici.html
@@ -122,10 +122,10 @@
             <div class="container_slide">
                 <div class="slider">
                     <div class="slides">
-                        <input type="radio" name="radio-btn" id="radio1" >
-                        <input type="radio" name="radio-btn" id="radio2" >
-                        <input type="radio" name="radio-btn" id="radio3" >
-                        <input type="radio" name="radio-btn" id="radio4" >
+                        <input type="radio" name="radio-btn" id="radio9" >
+                        <input type="radio" name="radio-btn" id="radio10" >
+                        <input type="radio" name="radio-btn" id="radio11" >
+                        <input type="radio" name="radio-btn" id="radio12" >
                         <div class="slide first">
                            <img src="../immagini/secondo1.jpeg" alt="">
                         </div>
@@ -146,10 +146,10 @@
                             </div>
                     </div>
                     <div class="navigation_manual">
-                        <label for="radio1" class="manual-btn"></label>
-                        <label for="radio2" class="manual-btn"></label>
-                        <label for="radio3" class="manual-btn"></label>
-                        <label for="radio4" class="manual-btn"></label>
+                        <label for="radio9" class="manual-btn"></label>
+                        <label for="radio10" class="manual-btn"></label>
+                        <label for="radio11" class="manual-btn"></label>
+                        <label for="radio12" class="manual-btn"></label>
                     </div>
                 </div>
                 <div class="container">
@@ -168,10 +168,10 @@
             <div class="container_slide" id="cs1">
                 <div class="slider" id="sl1">
                     <div class="slides">
-                        <input type="radio" name="radio-btn" id="radio5" >
-                        <input type="radio" name="radio-btn" id="radio6" >
-                        <input type="radio" name="radio-btn" id="radio7" >
-                        <input type="radio" name="radio-btn" id="radio8" >
+                        <input type="radio" name="radio-btn" id="radio13" >
+                        <input type="radio" name="radio-btn" id="radio14" >
+                        <input type="radio" name="radio-btn" id="radio15" >
+                        <input type="radio" name="radio-btn" id="radio16" >
                         <div class="slide first">
                             <img src="../immagini/primi piatti1.jpeg" alt="">
                         </div>
@@ -192,20 +192,17 @@
                             </div>
                     </div>
                     <div class="navigation_manual">
-                        <label for="radio5" class="manual-btn"></label>
-                        <label for="radio6" class="manual-btn"></label>
-                        <label for="radio7" class="manual-btn"></label>
-                        <label for="radio8" class="manual-btn"></label>
+                        <label for="radio13" class="manual-btn"></label>
+                        <label for="radio14" class="manual-btn"></label>
+                        <label for="radio15" class="manual-btn"></label>
+                        <label for="radio16" class="manual-btn"></label>
                     </div>
               
                 </div>
                 <div class="container">
                     <h2>Cocktail</h2>
-                    <h5>Siamo molto orgogliosi di offrire ai nostri clienti una vasta selezione di drink alcolici ed analcolici preparati dai nostri barman professionisti.</h5>
-                    <h5>La nostra carta dei drink è stata accuratamente studiata per offrire una varietà di opzioni per tutti i gusti, dai classici ai più moderni, senza mai perdere di vista la qualità degli ingredienti. I nostri barman sono altamente qualificati e possono creare cocktail personalizzati in base ai vostri gusti, utilizzando ingredienti freschi e di alta qualità.</h5>
-                    <h5>Inoltre, offriamo anche una selezione di analcolici, come succhi di frutta freschi e bevande gassate artigianali, ideali per coloro che non bevono alcol o per chi vuole solo rinfrescarsi.</h5>
-                    <h5>Non esitate a chiedere al nostro personale esperto consigli su cosa scegliere, saranno felici di consigliarvi e faremo in modo che il vostro tempo trascorso nel nostro locale sia il più piacevole possibile.</h5>
-                </div>
+                    <h5>Cwtch è orgoglioso di offrire una vasta selezione di drink alcolici ed analcolici preparati dai nostri barman professionisti. La nostra carta dei drink è stata accuratamente studiata per offrire una varietà di opzioni per tutti i gusti, dai classici ai più moderni, utilizzando ingredienti di alta qualità. I barman sono altamente qualificati e possono creare cocktail personalizzati in base ai gusti dei clienti. Inoltre, c'è una selezione di analcolici come succhi di frutta freschi e bevande gassate artigianali. Il personale è disponibile per darvi consigli su cosa scegliere e fare in modo che il tempo trascorso al Cwtch sia il più piacevole possibile.</h5>
+                    </div>
             </div>
         </div>
 
