--- a/file/contatti.html
+++ b/file/contatti.html
@@ -10,9 +10,9 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Ubuntu:wght@300&display=swap" rel="stylesheet">
+    <title>Document</title>
 </head>
 <body>
-    
     <header class="header clearfix">
         <a href="" class="header_icon_bar">
             <span></span>
@@ -22,28 +22,40 @@
         <menu class="menu-container">
             <ul>
                 <li class="header_menu_item"><a href="../Cwatch.html">Home</a></li>
-                <li class="header_menu_item"> <a href="menu.html">Menù</a></li>
+                <li class="header_menu_item"><a href="menu.html">Menù</a></li>
                 <li class="header_menu_item"><a href="i servizi.html">I servizi</a></li>
                 <li class="header_menu_item"><a href="contatti.html">Contatti</a></li>
                 <li class="header_menu_item"><a href="Lista alcolici.html">Enoteca e Drink</a></li>
             </ul>
         </menu>
     </header>
-    <div class="presentazione" id="ps1">
-        <div class="container_slide">
-            <div class="container">
-            <h2>Contatti</h2>
-            <p>Via paradiso, 28<br>
-                20158 Milano <br>
-                tel. 02 3060451 <br>
-            <a href="https://www.google.com/intl/it/gmail/about/">Cwatch@gmail.com</a>
-            </p>
+<div class="presentazione">
+<div class="container_slide">
+    <div class="section">
+        <div class="section_input">
+            <h2>Contattaci</h2>
+            <input type="text" placeholder="Nome" maxlength="20">
+            <input type="text" placeholder="Email" maxlength="20">
+            <input type="text" placeholder="Messaggio" maxlength="300">
+        <div class="button">
+            <p>Invia</p>
         </div>
-            <div class="slider">
-             <img src="../immagini/10.jpg" alt="">
-            </div>
         </div>
     </div>
+    <div class="container">
+        <p>Via paradiso, 28<br>
+            20158 Milano <br>
+            tel. 02 3060451 <br>
+            <a href="https://www.google.com/intl/it/gmail/about/">Cwatch@gmail.com</a>
+        </p>
+        <img src="ristorazione.jpg" alt="">
+    </div>
+</div> 
+</div> 
+
+<div class="map">
+    <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d11192.918657659056!2d9.1837812!3d45.4651773!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4786c15368f67a49%3A0x9666d3bd3b51251!2sMiB%20Milano%20-%20Restaurant%20Caf%C3%A8!5e0!3m2!1sit!2sit!4v1679012431247!5m2!1sit!2sit" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+</div>
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.3/jquery.min.js"></script>
     <script>
