--- a/Cwatch.html
+++ b/Cwatch.html
@@ -83,9 +83,9 @@
         </div>
         <div class="container">
             <h2>Cwtch Ristò</h2>
-            <h5>
+            <p>
                 Il nostro ristorante offre un menu gourmet preparato da chef esperti, con ingredienti di alta qualità e un'attenzione particolare alla presentazione dei piatti. Inoltre, abbiamo una vasta selezione di vini provenienti da diverse regioni, conservati nella nostra enoteca. Il nostro obiettivo è fornire ai nostri clienti un'esperienza culinaria unica e indimenticabile, accompagnata da un servizio attento e professionale.
-            </h5>
+            </p>
         </div>
     </div>
 </div>
@@ -125,10 +125,8 @@
       
         </div>
         <div class="container">
-            <h2>Il club</h2>
-            <p>Il nostro locale è dotato di un sistema audio e luci di alta qualità, progettato per offrire una esperienza di divertimento unica e coinvolgente. La nostra pista da ballo è spaziosa e accogliente, perfetta per ballare al ritmo della musica del nostro DJ residente o di artisti ospiti.</p>
-            <p>Offriamo anche una vasta selezione di drink e cocktail preparati dai nostri barman professionisti, per soddisfare tutti i gusti. E se vuoi trascorrere una serata speciale, abbiamo anche delle aree VIP riservate dove puoi godere di un'esperienza più esclusiva.</p>
-            <p>Il nostro staff di sicurezza è altamente qualificato e garantiamo un ambiente sicuro e divertente per tutti i nostri clienti. Siamo aperti tutte le notti, quindi vi invitiamo a venire a ballare e divertirvi con noi.</p>
+            <h2>Cwtch Club</h2>
+            <p>Cwtch Club è dotato di un sistema audio e luci di alta qualità, una spaziosa pista da ballo e una vasta selezione di drink preparati da barman professionisti. Il locale offre anche delle aree VIP riservate per un'esperienza più esclusiva. Il personale di sicurezza è altamente qualificato per garantire un ambiente sicuro e divertente per tutti i clienti. Cwtch è aperto tutte le notti e invita i clienti a venire a ballare e divertirsi.</p>
         </div>
     </div>
 </div>
