--- a/file/i servizi.html
+++ b/file/i servizi.html
@@ -62,7 +62,7 @@
             </div>
             <div class="container">
                 <h2>Cwtch servizi</h2>
-                <h5>Cwtch servizi ti offre la possibilità di celebrare i tuoi momenti con noi. Per compleanni, diciottesimi, feste di laurea o cene di lavoro il nostro staff altamente preparato per organizzare alla perfezione eventi speciali.</h5>
+                <p>Cwtch servizi ti offre la possibilità di celebrare i tuoi momenti con noi. Per compleanni, diciottesimi, feste di laurea o cene di lavoro il nostro staff altamente preparato per organizzare alla perfezione eventi speciali.</p>
             </div>
         </div>
     </div>
@@ -103,7 +103,9 @@
             </div>
             <div class="container">
                 <h2>Cena aziendale</h2>
-                <h5>Cwtch offre ai clienti sia sale private che spazi comuni con un'atmosfera unica e un'esperienza gastronomica eccezionale. Il menu può essere personalizzato in base alle esigenze dei clienti e lo staff è a disposizione per assistere nella pianificazione dell'evento, dalla disposizione dei tavoli alla scelta della musica e dell'illuminazione. Il ristorante si impegna a far vivere un'esperienza culinaria indimenticabile ai clienti e invita a contattarli per prenotare una cena aziendale.</h5>
+                <p>
+                   Cwtch offre ai clienti sia sale private che spazi comuni con un'atmosfera unica e un'esperienza gastronomica eccezionale. Il menu può essere personalizzato in base alle esigenze dei clienti e lo staff è a disposizione per assistere nella pianificazione dell'evento, dalla disposizione dei tavoli alla scelta della musica e dell'illuminazione. Cwtch Ristò si impegna a far vivere un'esperienza culinaria indimenticabile ai clienti e invita a contattarli per prenotare una cena aziendale.
+                </p>
             </div>
         </div>
     </div>
@@ -144,11 +146,9 @@
             </div>
             <div class="container">
                 <h2>Diciottesimo e compleanni</h2>
-                <h5>Siete alla ricerca di un luogo perfetto per festeggiare il vostro compleanno? Siamo lieti di offrire ai nostri clienti diverse opzioni per soddisfare tutte le vostre esigenze.</h5>
-                <h5>Potete scegliere di festeggiare con una cena deliziosa preparata dal nostro chef, con un aperitivo con gli amici o con una festa in discoteca, ballando al ritmo della musica del nostro DJ residente o di artisti ospiti.</h5>
-                <h5>Il nostro locale dispone di spazi ampi e ben arredati, perfetti per ospitare grandi gruppi di amici e familiari. Il nostro staff altamente qualificato sarà felice di personalizzare il menu e fornire un servizio di altissimo livello per rendere la vostra serata ancora più speciale.</h5>
-                <h5>Inoltre, il nostro sistema audio e luci di alta qualità creerà l'atmosfera perfetta per ballare e divertirsi con i vostri amici. E se volete rendere la vostra serata ancora più speciale, abbiamo anche aree VIP riservate.</h5>
-                <h5>Non importa quale sia la vostra scelta, ci impegniamo a farvi vivere una serata indimenticabile. Contattateci per prenotare la vostra festa di compleanno nel nostro locale, saremo felici di accogliervi e farvi vivere un'esperienza festosa e divertente. A presto!</h5>
+               <p>
+                Cwtch offre diverse opzioni per festeggiare un compleanno, tra cui cena, aperitivo con gli amici o festa in discoteca. Cwtch Ristò dispone di spazi ampi e ben arredati, con la possibilità di personalizzare il menu e il servizio. Inoltre, il sistema audio e luci di alta qualità garantisce l'atmosfera perfetta per ballare e divertirsi con gli amici, mentre le aree VIP offrono un'esperienza ancora più esclusiva. Cwtch si impegna a far vivere una serata indimenticabile ai clienti e invita a contattarli per prenotare una festa di compleanno.
+               </p>
             </div>
         </div>
     </div>
@@ -190,10 +190,7 @@
             </div>
             <div class="container">
                 <h2>Festa di laurea</h2>
-                <h5>Siamo lieti di offrire ai nostri clienti un ambiente festoso e accogliente per celebrare questo importante traguardo.</h5>
-                <h5>Il nostro locale dispone di spazi ampi e ben arredati, perfetti per ospitare grandi gruppi di amici e familiari. Il nostro staff altamente qualificato sarà felice di personalizzare il menu e fornire un servizio di altissimo livello per soddisfare le vostre esigenze.</h5>
-                <h5>Inoltre, il nostro sistema audio e luci di alta qualità creerà l'atmosfera perfetta per ballare e divertirsi con i vostri amici. Catering, fotografi, dj sono a vostra disposizione. Potete scegliere tra apericena, cena al tavolo o un semplice rinfresco.</h5>
-                <h5>Non importa quale sia il vostro desiderio, ci impegniamo a farvi vivere una serata indimenticabile. Contattateci per prenotare la vostra festa di laurea nel nostro locale, saremo felici di accogliervi e farvi vivere un'esperienza festosa e divertente. Congratulazioni per il vostro traguardo e a presto!</h5>
+                <p>Cwtch offre un ambiente festoso e accogliente per celebrare la laurea, con spazi ampi e ben arredati. Il personale altamente qualificato personalizzerà il menu e fornirà un servizio di altissimo livello per soddisfare le esigenze dei clienti. Il sistema audio e luci di alta qualità creerà l'atmosfera perfetta per ballare e divertirsi, e sono disponibili servizi aggiuntivi come catering, fotografi e DJ. I clienti possono scegliere tra apericena, cena al tavolo o rinfresco, e il locale si impegna a far vivere una serata indimenticabile.</p>
             </div>
         </div>
     </div>
